fix icon and spacing

--- a/src/implementations/vanilla/components/site-header/site-header-eu.scss
+++ b/src/implementations/vanilla/components/site-header/site-header-eu.scss
@@ -367,7 +367,7 @@ $language-list: null !default;
 
   .ecl-site-header__search-container {
     flex-grow: 1;
-    margin-inline-start: var(--s-s);
+    margin-inline-start: var(--s-xs);
   }
 
   // stylelint-disable plugin/selector-bem-pattern
